--- a/cryptoApp/index.html
+++ b/cryptoApp/index.html
@@ -24,12 +24,13 @@
           <a class="navbar-brand text-light">Crypto</a>
           <form class="d-flex" role="search">
             <input
+            id="id"
               class="form-control me-2"
               type="search"
               placeholder="Search"
               aria-label="Search"
             />
-            <button class="btn btn-outline-success" type="submit">
+            <button class="btn btn-outline-success" type="submit" id="submit">
               Search
             </button>
           </form>
