Snake_game completed

--- a/Snake_game/index.html
+++ b/Snake_game/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snake-game</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
   </head>
   <body>
     <div class="body">
+      <div id="scoreBox">Score 0</div>
+      <div id="hiscoreBox">Hi score: 0</div>
       <div id="board"></div>
     </div>
   </body>
+  <script src="script.js"></script>
 </html>
