--- a/customer_page/index.html
+++ b/customer_page/index.html
@@ -12,38 +12,51 @@
   </head>
   <body>
     <div class="container">
-      <div class="part-1">
-        <!-- <p>hello part one</p> -->
-        <img
-          id="photo"
-          src="https://cdn3.iconfinder.com/data/icons/avatars-flat/33/man_5-1024.png"
-          alt="img"
-        />
-        <div class="main">
-          <div class="data">
-            <ul style="list-style: none">
-              <!-- <p>kjcbsdichsd kcsdach asdkch slicbschkbcuilcv</p> -->
-              <li>Name :</li>
-              <li>Phone :</li>
-              <li>Email :</li>
-              <li>id :</li>
-              <li>Address :</li>
-            </ul>
-          </div>
-          <div class="data2">
-            <ul style="list-style: none">
-              <!-- <p>kjcbsdichsd kcsdach asdkch slicbschkbcuilcv</p> -->
-              <li>Priyanshu</li>
-              <li>9555916658</li>
-              <li>Priyanshu902844@gmail.com</li>
-              <li>1332</li>
-              <li>House number 522, FBD</li>
-            </ul>
+      <div class="main-part1">
+        <div class="image">
+          <img
+            src="https://cdn3.iconfinder.com/data/icons/avatars-flat/33/man_5-1024.png"
+            alt="img"
+            height="100"
+            width="100"
+          />
+        </div>
+        <div class="content">
+          <div class="actual-content">
+            <div class="name">
+              <div class="tage3">
+                <ul>
+                  <p class="info">Name</p>
+                  <p class="info">ID</p>
+                  <p class="info">Mobile</p>
+                  <p class="info">Email</p>
+                  <p class="info">Address</p>
+                </ul>
+              </div>
+              <div class="tage2">
+                <ul>
+                  <p class="info">Priyanshu</p>
+                  <p class="info">90284</p>
+                  <p class="info">9555916658</p>
+                  <p class="info">Priyansh9028@gmail.com</p>
+                  <p class="info">baselwa colony, fbd</p>
+                </ul>
+              </div>
+              <!-- <p>Name</p>
+              <p>Priyanshu</p> -->
+            </div>
           </div>
         </div>
       </div>
-      <div class="part-2">
-        <p>hello part two</p>
+      <!-- vljhvjjh -->
+      <div class="main-part2">
+        <div class="box" id="box1">ALL INFO</div>
+        <div class="box" id="box2">
+          <p class="border">Bank:467</p>
+          <p class="border">Bank:467</p>
+          <p class="border">Bank:467</p>
+        </div>
+        <div class="box" id="box3">Box 3</div>
       </div>
     </div>
   </body>
